--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="./style.css" />
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -11,8 +12,13 @@
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-      </nav>
+      <span> <a href="index.html">About</a> </span> 
+       <a href="new-properties.html">New Properties</a> 
+       <a href="real-estate-listings.html">Listings</a> 
+       <a href="market-report.html">Market Report</a>  
+       <a href="contact.html">Contact</a> 
+       <a href="http://hud.gov" target="_blank">H.U.D.</a> 
+        </nav>
     </header>
 
     <section id="featured-property">
